# WalytisIdentities

./: .gitignore  ComparisonToWesh.md  KeyUpdateProcesses.md  Makefile  README.md  ReadMe.md  ToDo.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
docs/API-Reference/: README.html  genindex.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  walytis_identities.datatransmission.html  walytis_identities.did_manager.html  walytis_identities.did_manager_blocks.html  walytis_identities.did_manager_with_supers.html  walytis_identities.exceptions.html  walytis_identities.generics.dm_wrapper.html  (+9 more)
identity/: device.py  did_manager.py  did_manager_blocks.py  did_objects.py  identity.py  key_store.py  member_blocks.py  utils.py
management/: friends_management.py  identity_management.py
tests/: .gitignore  _testing_utils.py  conftest.py  dmws_sync_docker.py  docker_datatr.py  docker_dmws_sync.py  docker_key_renewal.py  key_sharing_docker.py  monitor_dmws_sync_containers.sh  prebuilt_group_did_managers.py  pytest.ini  run_all_tests.py  test_all.py  test_contacts_chain.py  test_control_key_block.py  test_datatr.py  test_did_manager.py  test_did_manager_with_supers.py  test_did_manager_with_supers_synchronisation.py  test_dmws.py  test_dmws_generic_blockchain_features.py  test_dmws_synchronisation.py  test_generic_blockchain_features.py  test_group_did_manager.py  test_identities.py  test_identity_manager.py  test_invitation_codes.py  test_key_group.py  test_key_renewal.py  test_key_sharing.py  test_key_store.py  testing_utils.py
(+170 files in other folders)
